# M365-Toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: codeql.yml  markdown-lint.yml  powershell-pester-tests.yml  python-tests.yml  release.yml
config/: appsettings.sample.json  logging.sample.json  permissions.sample.json  tenant.sample.json
data/input/: devices.sample.csv  (+3 more)
docs/: active-directory-notes.md  architecture.md  authentication.md  examples.md  exchange-online-notes.md  graph-api-notes.md  permissions.md  sharepoint-online-notes.md  troubleshooting.md
powershell/: M365Toolkit.psd1  M365Toolkit.psm1
python/: README.md  pyproject.toml  requirements.txt
python/m365toolkit/auth/: graph_auth.py  token_cache.py
python/m365toolkit/exchange/: mailbox_report_parser.py
python/m365toolkit/graph/: audit_logs.py  devices.py  graph_client.py  groups.py  licenses.py  reports.py  users.py
python/m365toolkit/reports/: csv_writer.py  html_writer.py  json_writer.py
python/m365toolkit/security/: mfa_analyzer.py  risky_user_analyzer.py  score_calculator.py
python/m365toolkit/sharepoint/: permissions_report.py  site_inventory.py
python/m365toolkit/utils/: config_loader.py  logger.py  retry.py  validators.py
python/scripts/: detect_inactive_users.py  export_devices.py  export_groups.py  export_license_report.py  export_mfa_report.py  export_users.py  generate_html_dashboard.py  generate_security_score.py
python/tests/: test_config_loader.py  test_graph_client.py  test_retry.py  test_score_calculator.py
(+98 files in other folders)
