[project]
name = "m365toolkit"
version = "1.0.0"
description = "Python utilities for Microsoft 365 Graph automation and reporting"
authors = [{name = "Muhammad Yasir"}]
requires-python = ">=3.10"
dependencies = ["msal>=1.28.0", "requests>=2.31.0", "python-dotenv>=1.0.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
r